--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
               <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
               <a class="nav-link" href="{{ url_for('compose') }}">Compose</a>
               <a class="nav-link" href="{{ url_for('journal') }}">Journals</a>
-              <a class="nav-link" href="#">Let AI Help You Out</a>
+              <a class="nav-link" href="{{ url_for('AI') }}">Let AI Help You Out</a>
               <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
 
             </div>
