--- a/templates/journal.html
+++ b/templates/journal.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}My Journals - DAY WISE{% endblock %}
+{% block title %}My Journals{% endblock %}
 
 {% block content %}
 <style>
