--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="icon" href="/static/favicon.ico" />
-    <title>Login - DAY WISE</title>
+    <title>Login</title>
 
     <style>
       html,
