--- a/templates/edit_entry.html
+++ b/templates/edit_entry.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Edit Entry - DAY WISE{% endblock %}
+{% block title %}Edit Entry{% endblock %}
 
 {% block content %}
 <style>
