--- a/templates/view_entry.html
+++ b/templates/view_entry.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ entry.title }} - DAY WISE{% endblock %}
+{% block title %}{{ entry.title }}{% endblock %}
 
 {% block content %}
 <style>
